k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tiny-url
  labels:
    app: tiny-url
spec:
  replicas: 1 # 3 replicas for high availability
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: tiny-url
  template:
    metadata:
      labels:
        app: tiny-url
    spec:
      containers:
        - name: tiny-url
          image: gauravgaria93/tiny-url-service:latest # Image built from GitHub push
          ports:
            - containerPort: 8082
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /health
              port: 8082
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /ready
              port: 8082
            initialDelaySeconds: 5
            periodSeconds: 5
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - tiny-url
              topologyKey: "kubernetes.io/hostname" # Distribute pods across different nodes
---
apiVersion: v1
kind: Service
metadata:
  name: tiny-url-service
spec:
  selector:
    app: tiny-url
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
  type: LoadBalancer
