k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tiny-url-service
spec:
  selector:
    app: tiny-url
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
  type: ClusterIP
